--- a/src/App.css
+++ b/src/App.css
@@ -6,12 +6,19 @@ input{
 label{
   margin-right: 8px;
 }
-
+th{
+  padding: 10px;
+}
 
 table, th, td {
-  border: 1px solid black;
+  border: 2px solid rgb(238, 232, 232);
   border-collapse: collapse;
 }
 body{
   background: linear-gradient(90deg,rgb(94, 101, 94),rgb(233, 223, 223));
+}
+
+.action button{
+ margin: 2px 10px 2px 10px;
+ padding: 1px 11px 1px 11px
 }
